# secret-santa

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  auth.py  cerebrium.toml  create_admin.py  database.py  main.py  models.py  pairing.py  pyproject.toml  render.yaml
routers/: admin.py  users.py
static/: script.js  styles.css
templates/: dashboard.html  index.html
